# Soleil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Soleil.sh  qml.qrc
cplusplus/: main.cpp
cplusplus/business/calibration/: ccpcalibration.cpp  ccpcalibration.h
cplusplus/business/calibration/s19/: s19manager.cpp  s19manager.h  s19operate.cpp  s19operate.h
cplusplus/business/can/: canoperate.cpp  canoperate.h  logfilemanager.cpp  logfilemanager.h  logfileopt.cpp  logfileopt.h
cplusplus/business/can/include/: binlog_objects.h
cplusplus/business/crawler/: awememodel.cpp  awememodel.h  commentmodel.cpp  commentmodel.h  crawlercontroller.cpp  crawlercontroller.h
cplusplus/business/database/: sqlitemanager.cpp  sqlitemanager.h  sqlmanager.cpp  sqlmanager.h
cplusplus/business/features/: testoperate.cpp  testoperate.h  workthread.cpp  workthread.h
cplusplus/business/file/: exceloperate.cpp  exceloperate.h  fileoperate.cpp  fileoperate.h  textoperate.cpp  textoperate.h
cplusplus/business/layout/: layoutmanager.cpp  layoutmanager.h
cplusplus/business/lin/: PLinApi.h  linmanager.cpp  linmanager.h
cplusplus/business/network/: networkmanager.cpp  networkmanager.h  networkoperate.cpp  networkoperate.h
cplusplus/business/opengl/: learnopengl.cpp  learnopengl.h  shader.cpp  shader.h
cplusplus/business/system/: logmanager.cpp  logmanager.h  systemsettings.cpp  systemsettings.h  translationmanager.cpp  translationmanager.h
cplusplus/component/: arc.cpp  arc.h  torus.cpp  torus.h
cplusplus/midware/define/: basedefine.h  mathdefine.h  pathdefine.h
cplusplus/midware/qtenhanced/: enhancedqmlapplicationengine.cpp  enhancedqmlapplicationengine.h  mainwindowcontrol.cpp  mainwindowcontrol.h
cplusplus/midware/tools/: dandelion.cpp  dandelion.h
cplusplus/register/: classregister.cpp  classregister.h  componentregister.cpp  componentregister.h
qml/: main.qml  qml.qrc
qml/Component/: Button_HotReload.qml  Button_Normal.qml  ComboBox_Custom.qml  qmldir
qml/Context/: ColorConst.qml  Context.qml  FontConst.qml  FontIcon.qml  SizeConst.qml  StringConst.qml  qmldir
qml/HotReload/: hot_reload_widget.qml
qml/Layout/: InfoMessageBox.qml  LayoutBase.qml  MainWindow.qml  MainWindow2.qml  SubMenu.qml  TopLayout.qml
qml/Screen/: AscFile.qml  CanWindow.qml  CommentWindow.qml  CrawlerSettingWindow.qml  CrawlerWindow.qml  DownloadFile.qml  DtcWindow.qml  LinWindow.qml  LoginWindow.qml  S19Window.qml  ScreenBase.qml  translationWindow.qml
qml/Widget/: ColorLabel.qml  ExcelTransform.qml  FileOperate.qml  HotReloadWidget.qml  SwapMouseButton.qml  TextDisplay.qml  TextOperate.qml  TextToolTip.qml  TopHint.qml
resource/translation/: Soleil_en.ts  Soleil_zh.ts  translation.xlsx
